fix: Pequena correção no handlers das tasks. AB#19
